ingress/traefik/prduction/ingress-route/traefik-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: ingress-traefik
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`traefik-dashboard.aimhighergg.com`)
    kind: Rule
    middlewares:
    - name: ip-whitelist
    - name: basic-auth
    services:
    - name: api@internal
      kind: TraefikService
  tls:
    secretName: traefik-dashboard-tls
